# pipes-combinators

./: LICENSE  README.md  pipes-combinators.cabal
src/Pipes/: Combinators.hs
