name:                pipes-combinators
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Combinators
  build-depends:       base >=4.7 && <4.8, pipes
  hs-source-dirs:      src
  default-language:    Haskell2010